# workflow

./: .env.example  .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  script.js  script.ts  style.css  tsconfig.json
docs/: page1.md  page10.md  page11.md  page12.md  page13.md  page14.md  page15.md  page16.md  page17.md  page18.md  page19.md  page2.md  page20.md  page3.md  page4.md  page5.md  page6.md  page7.md  page8.md  page9.md
docs/code-explainations/: page0.md  page1.md  page2.md  page3.md  page4.md  page5.md  page6.md  page7.md
migrations/: 20260116120000_create_recordings_table.sql  20260118120000_add_task_groups.sql
src/: app.rs  lib.rs  main.rs
src/api/: groups.rs  handlers.rs  mod.rs  recordings.rs  static_handlers.rs
src/components/: date_filter.rs  mod.rs  record_button.rs  recording_list.rs  task_group_selector.rs
src/models/: dtos.rs
src/service/: prompt.md  transcription.rs
static/: index.html  script.js  script.ts  style.css
static/js/: script.js
static/src/: script.ts
